# pkg-pypi-packaging-tutorial

./: LICENSE  Pipfile  pyproject.toml
src/pkg-packaging-tutorial/: hello.py
src/pkg_packaging_tutorial.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
